--- a/HTML/HTML_practice01/01_HTML_Basics.html
+++ b/HTML/HTML_practice01/01_HTML_Basics.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Basics</title>
 </head>
 <body>
@@ -10,6 +11,7 @@
     <h3>Welcome to HTML</h3>
     <h4>Welcome to HTML</h4>
     <h5>Welcome to HTML</h5>
-    <h6>Welcome to HTML=</h6>
+    <h6>Welcome to HTML</h6>
+
 </body>
 </html>
